--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:theme="@style/Theme.UMFlintApplication"
         tools:targetApi="31">
         <activity
+            android:name=".DepartmentInformationActivity"
+            android:exported="false"
+            android:label="@string/title_activity_department_information"
+            android:theme="@style/Theme.UMFlintApplication.NoActionBar" />
+        <activity
+            android:name=".MapsPage"
+            android:exported="false"
+            android:label="@string/title_activity_maps_page"
+            android:theme="@style/Theme.UMFlintApplication.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
