Added the AcademicCalendar.kt to test

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,7 +13,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UMFlintApplication"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".AcademicCalendar"
+            android:exported="false"
+            android:label="@string/title_activity_academic_calendar"
+            android:theme="@style/Theme.UMFlintApplication.NoActionBar" />
         <activity
             android:name=".AlertsActivity"
             android:exported="false"
@@ -22,12 +29,11 @@
             android:name=".NewsActivity"
             android:exported="false"
             android:label="@string/title_news"
-            android:theme="@style/Theme.UMFlintApplication.NoActionBar" />
-<!--        <activity-->
-<!--            android:name=".SignInActivity"-->
-<!--            android:exported="false"-->
-<!--            android:label="@string/title_sign_in"-->
-<!--            android:theme="@style/Theme.UMFlintApplication.NoActionBar" />-->
+            android:theme="@style/Theme.UMFlintApplication.NoActionBar" /> <!-- <activity -->
+        <!-- android:name=".SignInActivity" -->
+        <!-- android:exported="false" -->
+        <!-- android:label="@string/title_sign_in" -->
+        <!-- android:theme="@style/Theme.UMFlintApplication.NoActionBar" /> -->
         <activity
             android:name=".DepartmentInformationActivity"
             android:exported="false"
@@ -43,7 +49,6 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.UMFlintApplication.NoActionBar">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
