--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,16 @@
             android:label="@string/title_activity_department_information"
             android:theme="@style/Theme.UMFlintApplication.NoActionBar" />
         <activity
+            android:name=".ScheduleAdvisorActivity"
+            android:exported="false"
+            android:label="@string/title_schedule_advisor"
+            android:theme="@style/Theme.UMFlintApplication.NoActionBar" />
+        <activity
+            android:name=".ScheduleGroupMeetingActivity"
+            android:exported="false"
+            android:label="@string/title_schedule_group_meeting"
+            android:theme="@style/Theme.UMFlintApplication.NoActionBar" />
+        <activity
             android:name=".MapsActivity"
             android:exported="false"
             android:label="@string/title_activity_maps_page"
