--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ googleid = "1.1.1"
 gson = "2.11.0"
 playServicesAuth = "21.2.0"
 activityKtx = "1.10.0-beta01"
+sandwichRetrofit = "2.0.10"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -39,6 +40,7 @@ googleid = { group = "com.google.android.libraries.identity.googleid", name = "g
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
 androidx-activity-ktx = { group = "androidx.activity", name = "activity-ktx", version.ref = "activityKtx" }
+sandwich-retrofit = { group = "com.github.skydoves", name = "sandwich-retrofit", version.ref = "sandwichRetrofit" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
