--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,10 +40,6 @@
             android:exported="false"
             android:label="@string/title_student_messaging"
             android:theme="@style/Theme.UMFlintApplication.NoActionBar"/>
-        <!-- android:name=".SignInActivity" -->
-        <!-- android:exported="false" -->
-        <!-- android:label="@string/title_sign_in" -->
-        <!-- android:theme="@style/Theme.UMFlintApplication.NoActionBar" /> -->
         <activity
             android:name=".DepartmentInformationActivity"
             android:exported="false"
@@ -58,6 +54,11 @@
             android:name=".ScheduleGroupMeetingActivity"
             android:exported="false"
             android:label="@string/title_schedule_group_meeting"
+            android:theme="@style/Theme.UMFlintApplication.NoActionBar" />
+        <activity
+            android:name=".ScheduleStudentMeetingActivity"
+            android:exported="false"
+            android:label="@string/schedule_student"
             android:theme="@style/Theme.UMFlintApplication.NoActionBar" />
         <activity
             android:name=".MapsPage"
