--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         tools:targetApi="31">
         <activity
             android:name=".BuildingHours"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.UMFlintApplication.NoActionBar" />
         <activity
             android:name=".AcademicCalendar"
             android:exported="false"
